team names and selection

--- a/mission13/Views/Shared/_Layout.cshtml
+++ b/mission13/Views/Shared/_Layout.cshtml
@@ -21,23 +21,26 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <div class="row m-1 p-1">
+        <div id="teams"class="col-2">
+            <vc:teams></vc:teams>
+        </div>
+
+        <div class="container col-10">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
     </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - mission13 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - mission13
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
