--- a/mission13/Views/Home/Index.cshtml
+++ b/mission13/Views/Home/Index.cshtml
@@ -4,18 +4,7 @@
 
 @model List<Bowler>
 
-<h1>Bowlers</h1>
-@*<div class="d-grid gap-2">
-
-    <a asp-controller="Home" asp-action="Index" asp-route-teamName="" class="btn btn-block btn-outline-secondary">Home</a>
-
-    @foreach (string t in Model)
-    {
-        <a asp-controller="Home" asp-action="Index" asp-route-teamName="@t"
-           class="btn btn-block @(ViewBag.SelectedName == t ? "btn-primary" : "btn-outline-secondary")">@t</a>
-    }
-
-</div>*@
+<h1>Bowlers Info</h1>
 
 <table class="table table-sm table-striped table-bordered table-dark">
     <thead>
@@ -45,15 +34,12 @@
             <td>@b.BowlerPhoneNumber</td>
 
             <td>
-                <NavLink class="btn btn-warning btn-sm" href="">Edit</NavLink>
+                <a class="btn btn-warning btn-sm" asp-controller="Home" asp-action="Edit" asp-route-id="@b.BowlerID">Edit</a>
             </td>
-            @*@GetEditUrl(b.BowlerID)*@
 
             <td>
-                <NavLink class="btn btn-danger btn-sm">Delete</NavLink>
+                <a class="btn btn-danger btn-sm" asp-controller="Home" asp-action="Delete" asp-route-id="@b.BowlerID">Delete</a>
             </td>
-            @*@onclick="@(x => RemoveBowler(b))*@
-
         </tr>
         }
     </tbody>
